--- a/index.html
+++ b/index.html
@@ -11,50 +11,278 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
-<body>
- 
-    <div class="main_box">
-        <h2>Reena Girl Birthday Countdown</h2>
-        <div class="counterDown">
-           <span>Days:  <span class="days" ></span></span>
-            <span>Hours: <span class="hours" ></span></span>
-            <span>Minutes: <span class="minutes" ></span></span>
-            <span>Seconds: <span class="seconds" ></span></span>
-        </div>
+<div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
     </div>
-    
-    <script src="main.js"></script>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
+    <div class="card">
+    <div class="back"></div>
+    <div class="front">
+      <div class="imgset">
+           <img width="100%" src="https://1.bp.blogspot.com/-Mgj9-rbs65E/XfMoPSD5gtI/AAAAAAAAURk/NBokE2gSS2cTSJ2em5lZ5hJDuTtRN7UVwCLcBGAsYHQ/s1600/2713997.png">
+         </div>
+    </div>
+    <div class="text-container">
+      <p id="head">Happy Birthday அத்தான்!</p>
+      <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!</p>
+      <p>Hope your day goes great!</p>
+    </div>
+  </div>
 </body>
 </html>
-<script>
-let day = document.querySelector('.days')
-let hour = document.querySelector('.hours')
-let minute = document.querySelector('.minutes')
-let second = document.querySelector('.seconds')
-let mainBox = document.querySelector('.main_box')
-
-setInterval(function(){
-
-let UpcomingDate = new Date('05 november 2022 11:59:00 PM');
-let NowDate = new Date();
-let differanceTime  = Math.floor((UpcomingDate-NowDate)/1000)
-
-
-let differanceDay = Math.floor(differanceTime/60/60/24)
-let differanceHour = Math.floor((differanceTime/60/60)%24)
-let differanceMinute = Math.floor((differanceTime/60)%60)
-let differanceSecound = Math.floor(differanceTime%60)
-
-
-
-if(differanceDay >= 0){
-    mainBox.style.display = "block";
-    day.innerHTML =  differanceDay;
-    hour.innerHTML =  differanceHour;
-    minute.innerHTML =differanceMinute;
-    second.innerHTML = differanceSecound;   
-}
-
-
-},1000)
-</script>
